--- a/GCR.Web/Views/Error/Index.cshtml
+++ b/GCR.Web/Views/Error/Index.cshtml
@@ -18,8 +18,8 @@
         }
         <p style="font-size:1.1em">
             If this error persists, please go to our @Html.ActionLink("contact page", "About", "Home") 
-            for help us want you were doing when this error occurred and any other 
-            helpful information that may help us find this.
+            for help. Tell us what you were doing when this error occurred and any other 
+            helpful information that may help us fix this.
         </p>
         <p style="font-size:1.1em">
             Thank you for your patience and understanding.
