--- a/GCR.Web/Views/Home/About.cshtml
+++ b/GCR.Web/Views/Home/About.cshtml
@@ -1,34 +1,34 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>@ViewBag.Message</h2>
-</hgroup>
-
-<article>
-    <p>
-        Use this area to provide additional information.
-    </p>
-
-    <p>
-        Use this area to provide additional information.
-    </p>
-
-    <p>
-        Use this area to provide additional information.
-    </p>
-</article>
-
-<aside>
-    <h3>Aside Title</h3>
-    <p>
-        Use this area to provide additional information.
-    </p>
-    <ul>
-        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-        <li>@Html.ActionLink("About", "About", "Home")</li>
-        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-    </ul>
-</aside>
+<div class="four row">
+    <div class="twelve border">
+        <div class="ten columns offset-by-one alpha">
+            <h2>Map</h2>
+            <img src="~/Content/images/map.jpg" class="photo"/>
+            <h4>Hwy. 169 & North Park Drive</h4>
+        </div>
+        <div class="ten columns offset-by-two omega">
+            <h2>History of the University</h2>
+            <div class="wrapper">
+                <figure class="img-indent box-img">
+                    <img alt="" src="images/page2-img2.jpg ">
+                </figure>
+                <h5 class="p3">Ullam corporis suscipit laboriosam
+                nisi ut aliquid ex ea commod.</h5>
+                <p>Nam elit magna, hendrerit sit amet, tincidunt ac, viverra sed, nulla. Donec porta diam eu massa. Quisque diam lorem, interdum vitae, dapibus ac, scelerisque vitae, pede. Donec eget tellus non erat lacinia fermentum. Donec in velit vel ipsum  pulvinar. Proin ullamcorpe.</p>
+                <p class="p3 p0">Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit. Aenean auctor wisi et urna. Aliquam erat volutpat. Duis ac turpis. </p>
+                <div class="p6">
+                    <figure class="img-indent-r box-img">
+                        <img alt="" src="images/page2-img3.jpg ">
+                    </figure>
+                    <p>Nam elit magna, hendrerit sit amet, tincidunt ac, viverra sed, nulla. Donec porta diam eu massa. Quisque diam lorem, interdum vitae.</p>
+                    <p class="p1">
+                        Dapibus ac, scelerisque vitae, pede. Donec eget tellus non erat lacinia fermentum. Donec in velit vel ipsum auctor pulvinar. Proin ullamcorpe.
+                  auris accumsan nulla vel diam.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
