--- a/GCR.Web/Views/News/_Archive.cshtml
+++ b/GCR.Web/Views/News/_Archive.cshtml
@@ -6,7 +6,7 @@
 <ul>
     @foreach (var item in @Model)
     {
-        <li>
+        <li style="margin-bottom:0.3em">
             <a href="@item.Link">@item.Name (@item.Count)</a>
         </li>
     }
