--- a/GCR.Web/Views/News/_Details.cshtml
+++ b/GCR.Web/Views/News/_Details.cshtml
@@ -1,10 +1,11 @@
 ﻿@model GCR.Web.Models.NewsViewModel
-<h3>
-    @Html.ActionLink(@Model.Title, "Details", new {id = @Model.NewsId})
-</h3>
-<h5>
-    Posted on @Model.CreatedDate
-</h5>
-<div style="margin-bottom:5em">
-    @Html.Raw(@Model.Article)
+<div class="article" style="margin-bottom: 5em">
+    <h3>
+        @Html.ActionLink(@Model.Title, "Details", new { id = @Model.NewsId })
+    </h3>
+    <h5>Posted on @Model.CreatedDate
+    </h5>
+    <div>
+        @Html.Raw(@Model.Article)
+    </div>
 </div>
